- SNMP port and context can be specified in NXSL function CreateSNMPTransport
- Fixed Summary DCI table fail when row limit set
- Fixed menu path creation for Summary DCI Table and folder creation for graph view
- New command line options for Windows agent installer: /FORCECREATECONFIG, /LOGFILE=, /FILESTORE=, /CONFIGINCLUDEDIR=
- Fixed issues:
	NX-1435 (AgentTunnelListenPort configuration parameter is missing from config table)
	NX-1471 (Add option to create node in maintenance mode)
	NX-1472 (Physical Hyper-V Hosts are reporting as Node Type "Virtual" in 2.2.7)
	NX-1480 (Varbinds in SNMP Traps restricted to 255 characters)
	NX-1481 (Configuration option to disable topology based event correlation)
	NX-1482 (NetXMS server ignoring Syslog and Traps from devices in a Zone which are sending directly to NetXMS server)
	NX-1484 (Corrupted event messages if MySQL is used as backend database)


*
* 2.2.7
*

- "Convert to hexadecimal string" option for SNMP table columns
- Improved configuration wizard in Windows server installer
- New command line option /CONFIGENTRY in Windows agent installer
- New dashboard element "Object Details" (based on object queries)
- TCP proxy functionality
- Improved "Alarm Details" view in management console
- Added support for agent actions defined in external subagents
- TCP listener can be disabled in agent configuration file
- Push connector can be disabled in agent configuration file
- Virtual nodes detection via agent
- Basic BIOS and hardware platform information provided by Windows agent
- Fixed issues:
	NX-993 (Windows installer should honor current state of services during upgrade)
	NX-1438 (Increase debug level for thread pool messages)
	NX-1453 (Windows installer option to disable database upgrade)
	NX-1455 (Zone UIN in NXSL function CreateNode)
	NX-1456 (DCI values aggregated on cluster may be incorrect on first few polls after server startup)
	NX-1460 (Configure does not detect pthread_setname_np on macOS)