@@ -29,7 +29,10 @@
 - Fixed menu path creation for Summary DCI Table and folder creation for graph view
 - New command line options for Windows agent installer: /FORCECREATECONFIG, /LOGFILE=, /FILESTORE=, /CONFIGINCLUDEDIR=
 - Fixed issues:
+	NX-1377 (Can't upgrade sqlite database from version 21.4 to 21.5 with error "Unable to set not null constraint")
 	NX-1435 (AgentTunnelListenPort configuration parameter is missing from config table)
+	NX-1458 (DB upgrade from 0.454 to 0.455 failing for sqlite)
+	NX-1459 (Online upgrade for 22.21 failed on sqlite)
 	NX-1471 (Add option to create node in maintenance mode)
 	NX-1472 (Physical Hyper-V Hosts are reporting as Node Type "Virtual" in 2.2.7)
 	NX-1480 (Varbinds in SNMP Traps restricted to 255 characters)
